# vilan

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.github/workflows/: docs.yml  release.yml
crates/vilan-cli/: Cargo.toml  build.rs
crates/vilan-cli/src/: hmr.rs  hmr_shim.js  main.rs  paint.rs  upgrade.rs
crates/vilan-cli/tests/: assets.rs  benchmarks.rs  cancellation.rs  corpus.rs  database.rs  hmr.rs  hmr_overlay.rs  hmr_swap.rs  hygiene.rs  install.rs  macro_std.rs  owned_nursery.rs  router.rs  rpc_http.rs  streaming.rs  transport_robustness.rs  upgrade.rs  workspace.rs
crates/vilan-core/: Cargo.toml
crates/vilan-embedded-std/: Cargo.toml  build.rs
crates/vilan-lsp/: Cargo.toml
crates/vilan-lsp/src/: document.rs  line_index.rs  main.rs  publish.rs
editors/vscode/: LICENSE-APACHE  LICENSE.md  README.md  package-lock.json  package.json
scripts/: bump-version.sh  install.sh
src/: analyzer.rs  call_graph.rs  context.rs  error.rs  interpreter.rs  lexer.rs  main.rs  node.rs  parser.rs  shared.rs  token.rs  transformer.rs  type_.rs  util.rs
src/jarpen-source/: basic.vl  context.vl  counter.jp  example-1.jp  implementation.jp  return.jp  working-copy.jp  working-copy.vl
src/vilan-source/: complex-type-constraints.vl  context.vl  guessing-game.js  guessing-game.vl  http-server-reference.js  http-server.js  http-server.vl  jump.vl  lifetime.vl  program-1.js  program-1.vl  signals.vl  ui-framework.vl  working-copy.analyze.out  working-copy.js  working-copy.parse.out  working-copy.vl
vilan/: http-server.js  working-copy.js
vilan-source/: context.vl  numbers.vl
vilan-source/features/: match.vl
vilan-source/test/: bool.vl  default-generic-param.js  for-in.js  gap-b.js  iterator-protocol.vl  list-build-infer.vl  loops.js  match-patterns.js  match-patterns.vl  string-interpolation.vl  struct-literal-call.js  trait-default.js  trait-default.vl  view-conventions.js  view-primitive.vl
vilan/benchmarks/: README.md  vilan.toml
vilan/docs/: README.md  SUMMARY.md  book.toml
vilan/features/: block.vl
vilan/macro_std/: vilan.toml
vilan/outdated/: context.js  guessing-game.vl  infer-namespaced-item.vl  ui-framework.vl  working-copy.vl
vilan/playground/: playground.vl
vilan/proposal/: ambient-owner.md  analysis-reuse.md  analyzer-refactor.md  async-polymorphism.md  backlog-2026-07-18.md  backlog.md  bits-and-bytes.md  claims-and-epochs.md  compiler-bindings.md  const-eval.md  constraint-queue-plan.md  destruction-impl-plan.md  destruction.md  diagnostics-ledger.md  diagnostics-standard.md  docs-site.md  documentation.md  expression-lifting.md  fixed-arrays.md  fn-coercion.md  frontend.md  hashable-keys.md  hmr.md  lazy.md  (+38 more)
(+467 files in other folders)
