[package]
name = "vilan-cli"
version = "0.5.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The vilan language toolchain"

[[bin]]
name = "vilan"
path = "src/main.rs"

[dependencies]
vilan-core = { path = "../vilan-core" }
vilan-embedded-std = { path = "../vilan-embedded-std" }
ariadne = "0.6.0"
chumsky = "0.12.0"
clap = { version = "4", features = ["derive"] }
