[package]
name = "vilan-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vilan-lsp"
path = "src/main.rs"

[dependencies]
vilan-core = { path = "../vilan-core" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "time"] }
dashmap = "6"
toml = "0.8"
